# Flam

./: .editorconfig  .gitignore  ARCHITECTURE.md  COMMIT_GUIDE.md  COMPLETION_SUMMARY.md  EVALUATION.md  FINAL_CHECKLIST.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  TROUBLESHOOTING.md  build.gradle  local.properties.template  quick-start.bat  settings.gradle
android-app/: build.gradle  proguard-rules.pro
android-app/src/main/: AndroidManifest.xml
android-app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-app/src/main/java/com/example/edge/: MainActivity.kt  NativeLib.kt
android-app/src/main/java/com/example/edge/camera/: CameraHelper.kt
android-app/src/main/java/com/example/edge/gl/: CameraRenderer.kt
android-app/src/main/java/com/example/edge/ui/: CameraGLSurfaceView.kt
android-app/src/main/res/layout/: activity_main.xml
android-app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
screenshots/: README.md
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.ts
